<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="0dp"
      android:background="@color/blackopac70"
      android:orientation="horizontal">
      <Button
          android:id="@+id/btnAll"
          android:background="@color/pink_light"
          android:layout_marginEnd="1dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentStart="true"
          android:text="@string/tabAll"/>
      <Button
          android:id="@+id/btnFav"
          android:background="@color/pink_light"
          android:layout_marginEnd="1dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toEndOf="@+id/btnAll"
          android:text="@string/tabFav"/>
      <Button
          android:id="@+id/btnLunch"
          android:layout_marginEnd="1dp"
          android:background="@color/pink_light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toEndOf="@+id/btnFav"
          android:text="@string/tabLunch"/>
      <Button
          android:id="@+id/btnDinner"
          android:layout_marginEnd="1dp"
          android:background="@color/pink_light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toEndOf="@+id/btnLunch"
          android:text="@string/tabDinner"/>
      <Button
          android:id="@+id/btnDessert"
          android:layout_marginEnd="1dp"
          android:background="@color/pink_light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_toEndOf="@+id/btnDinner"
          android:text="@string/tabDessert"/>
  </RelativeLayout>
    </HorizontalScrollView>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:padding="5dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchyo"
            android:textColor="@color/blackopac70"
            android:hint="@string/search" />
        <ImageButton
            android:id="@+id/clearSearchfield"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end|center_vertical"
            android:background="@android:drawable/ic_menu_close_clear_cancel" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/contentFragment"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
